update to sesamestreet

--- a/SesameStreetParty.ipynb
+++ b/SesameStreetParty.ipynb
@@ -568,7 +568,7 @@
         }
       ],
       "source": [
-        "!git clone https://PaoFe:Mueslicraze1+@github.com/lclass/NLP_Assignment_2.git"
+        "#!git clone https://{your_username}:{your_password}@github.com/{destination_repo_username}/{destination_repo_projectname}.git"
       ]
     },
     {
