--- a/SesameStreetParty.ipynb
+++ b/SesameStreetParty.ipynb
@@ -2030,13 +2030,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 61,
       "metadata": {
         "id": "2v6gQXcpVtM6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab6b96a1-b54f-4ab5-ce1b-8384c9839c8a"
+        "outputId": "e89d8e8f-da93-46ad-be10-3a0e8f57bc7c"
       },
       "outputs": [
         {
@@ -2056,35 +2056,13 @@
             "                             text  hate\n",
             "147           I hate from Kosovo.     0\n",
             "179  I hate from Channel Islands.     0\n",
-            "197           I hate Greenlandic.     0\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(\"\\n\\033[1mThree correct nationality hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_correct_label = nathate_df[nathate_df['hate']==1]\n",
-        "print(three_correct_label.head(3).to_string())\n",
-        "\n",
-        "print(\"\\n\\033[1mThree incorrect nationality hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_incorrect_label = nathate_df[nathate_df['hate']==0]\n",
-        "print(three_incorrect_label.head(3).to_string())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 54,
-      "metadata": {
-        "id": "ST4weJCoVtM7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "72d58268-cbb4-4399-f5fc-0246b37a12b6"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "197           I hate Greenlandic.     0\n",
+            "\n",
+            "\n",
+            "—————————————————————————————————————————————\n",
+            "—————————————————————————————————————————————\n",
+            "\n",
+            "\n",
             "\n",
             "\u001b[1mThree correct nationality no-hate labels:\n",
             "--------------------------------\u001b[0m\n",
@@ -2098,35 +2076,13 @@
             "                    text  hate\n",
             "0   I don’t hate Chinese     1\n",
             "1    I don’t hate Indian     1\n",
-            "2  I don’t hate American     1\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(\"\\n\\033[1mThree correct nationality no-hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_correct_label = natnohate_df[natnohate_df['hate']==0]\n",
-        "print(three_correct_label.head(3).to_string())\n",
-        "\n",
-        "print(\"\\n\\033[1mThree incorrect nationality no-hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_incorrect_label = natnohate_df[natnohate_df['hate']==1]\n",
-        "print(three_incorrect_label.head(3).to_string())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 50,
-      "metadata": {
-        "id": "tzvSEj9hVtM7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "46c0bc2e-c811-435d-89d4-801a96210503"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "2  I don’t hate American     1\n",
+            "\n",
+            "\n",
+            "—————————————————————————————————————————————\n",
+            "—————————————————————————————————————————————\n",
+            "\n",
+            "\n",
             "\n",
             "\u001b[1mThree correct religion hate labels:\n",
             "--------------------------------\u001b[0m\n",
@@ -2139,35 +2095,13 @@
             "--------------------------------\u001b[0m\n",
             "Empty DataFrame\n",
             "Columns: [text, hate]\n",
-            "Index: []\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(\"\\n\\033[1mThree correct religion hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_correct_label = relhate_df[relhate_df['hate']==1]\n",
-        "print(three_correct_label.head(3).to_string())\n",
-        "\n",
-        "print(\"\\n\\033[1mThree incorrect religion hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_incorrect_label = relhate_df[relhate_df['hate']==0]\n",
-        "print(three_incorrect_label.head(3).to_string())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 53,
-      "metadata": {
-        "id": "p39D9QSIVtM7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6687520c-cfd5-4874-f944-9689c0b78591"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "Index: []\n",
+            "\n",
+            "\n",
+            "—————————————————————————————————————————————\n",
+            "—————————————————————————————————————————————\n",
+            "\n",
+            "\n",
             "\n",
             "\u001b[1mThree correct religion no-hate labels:\n",
             "--------------------------------\u001b[0m\n",
@@ -2185,6 +2119,46 @@
         }
       ],
       "source": [
+        "\n",
+        "print(\"\\n\\033[1mThree correct nationality hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_correct_label = nathate_df[nathate_df['hate']==1]\n",
+        "print(three_correct_label.head(3).to_string())\n",
+        "\n",
+        "print(\"\\n\\033[1mThree incorrect nationality hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_incorrect_label = nathate_df[nathate_df['hate']==0]\n",
+        "print(three_incorrect_label.head(3).to_string())\n",
+        "\n",
+        "print('\\n')\n",
+        "print('—————————————————————————————————————————————')\n",
+        "print('—————————————————————————————————————————————')\n",
+        "print('\\n')\n",
+        "\n",
+        "print(\"\\n\\033[1mThree correct nationality no-hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_correct_label = natnohate_df[natnohate_df['hate']==0]\n",
+        "print(three_correct_label.head(3).to_string())\n",
+        "\n",
+        "print(\"\\n\\033[1mThree incorrect nationality no-hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_incorrect_label = natnohate_df[natnohate_df['hate']==1]\n",
+        "print(three_incorrect_label.head(3).to_string())\n",
+        "\n",
+        "print('\\n')\n",
+        "print('—————————————————————————————————————————————')\n",
+        "print('—————————————————————————————————————————————')\n",
+        "print('\\n')\n",
+        "\n",
+        "print(\"\\n\\033[1mThree correct religion hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_correct_label = relhate_df[relhate_df['hate']==1]\n",
+        "print(three_correct_label.head(3).to_string())\n",
+        "\n",
+        "print(\"\\n\\033[1mThree incorrect religion hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_incorrect_label = relhate_df[relhate_df['hate']==0]\n",
+        "print(three_incorrect_label.head(3).to_string())\n",
+        "\n",
+        "print('\\n')\n",
+        "print('—————————————————————————————————————————————')\n",
+        "print('—————————————————————————————————————————————')\n",
+        "print('\\n')\n",
+        "\n",
         "print(\"\\n\\033[1mThree correct religion no-hate labels:\\n--------------------------------\\033[0m\")\n",
         "three_correct_label = relnohate_df[relnohate_df['hate']==0]\n",
         "print(three_correct_label.head(3).to_string())\n",
