--- a/SesameStreetParty.ipynb
+++ b/SesameStreetParty.ipynb
@@ -1370,13 +1370,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 73,
       "metadata": {
         "id": "2v6gQXcpVtM6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e89d8e8f-da93-46ad-be10-3a0e8f57bc7c"
+        "outputId": "55340225-3f4f-4808-ee57-b0c215dcc5cb"
       },
       "outputs": [
         {
@@ -1396,13 +1396,44 @@
             "                             text  hate\n",
             "147           I hate from Kosovo.     0\n",
             "179  I hate from Channel Islands.     0\n",
-            "197           I hate Greenlandic.     0\n",
-            "\n",
-            "\n",
-            "—————————————————————————————————————————————\n",
-            "—————————————————————————————————————————————\n",
-            "\n",
-            "\n",
+            "197           I hate Greenlandic.     0\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"\\n\\033[1mThree correct nationality hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_correct_label = nathate_df[nathate_df['hate']==1]\n",
+        "print(three_correct_label.head(3).to_string())\n",
+        "\n",
+        "print(\"\\n\\033[1mThree incorrect nationality hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_incorrect_label = nathate_df[nathate_df['hate']==0]\n",
+        "print(three_incorrect_label.head(3).to_string())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n\\033[1mThree correct nationality no-hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_correct_label = natnohate_df[natnohate_df['hate']==0]\n",
+        "print(three_correct_label.head(3).to_string())\n",
+        "\n",
+        "print(\"\\n\\033[1mThree incorrect nationality no-hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_incorrect_label = natnohate_df[natnohate_df['hate']==1]\n",
+        "print(three_incorrect_label.head(3).to_string())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "79uG2WsWLEtl",
+        "outputId": "3c7b056b-a802-41b2-ad1f-e34cda1b3953"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "\n",
             "\u001b[1mThree correct nationality no-hate labels:\n",
             "--------------------------------\u001b[0m\n",
@@ -1416,13 +1447,35 @@
             "                    text  hate\n",
             "0   I don’t hate Chinese     1\n",
             "1    I don’t hate Indian     1\n",
-            "2  I don’t hate American     1\n",
-            "\n",
-            "\n",
-            "—————————————————————————————————————————————\n",
-            "—————————————————————————————————————————————\n",
-            "\n",
-            "\n",
+            "2  I don’t hate American     1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n\\033[1mThree correct religion hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_correct_label = relhate_df[relhate_df['hate']==1]\n",
+        "print(three_correct_label.head(3).to_string())\n",
+        "\n",
+        "print(\"\\n\\033[1mThree incorrect religion hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_incorrect_label = relhate_df[relhate_df['hate']==0]\n",
+        "print(three_incorrect_label.head(3).to_string())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5oDByefbLFde",
+        "outputId": "7eeaf725-082b-491c-e14a-6b5d15180b33"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "\n",
             "\u001b[1mThree correct religion hate labels:\n",
             "--------------------------------\u001b[0m\n",
@@ -1435,13 +1488,35 @@
             "--------------------------------\u001b[0m\n",
             "Empty DataFrame\n",
             "Columns: [text, hate]\n",
-            "Index: []\n",
-            "\n",
-            "\n",
-            "—————————————————————————————————————————————\n",
-            "—————————————————————————————————————————————\n",
-            "\n",
-            "\n",
+            "Index: []\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n\\033[1mThree correct religion no-hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_correct_label = relnohate_df[relnohate_df['hate']==0]\n",
+        "print(three_correct_label.head(3).to_string())\n",
+        "\n",
+        "print(\"\\n\\033[1mThree incorrect religion no-hate labels:\\n--------------------------------\\033[0m\")\n",
+        "three_incorrect_label = relnohate_df[relnohate_df['hate']==1]\n",
+        "print(three_incorrect_label.head(3).to_string())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bj1dQJnVLFsX",
+        "outputId": "74961c32-bfd9-4139-e633-edcf2f6527ac"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "\n",
             "\u001b[1mThree correct religion no-hate labels:\n",
             "--------------------------------\u001b[0m\n",
@@ -1457,55 +1532,6 @@
             "2         I don’t hate Islam     1\n"
           ]
         }
-      ],
-      "source": [
-        "\n",
-        "print(\"\\n\\033[1mThree correct nationality hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_correct_label = nathate_df[nathate_df['hate']==1]\n",
-        "print(three_correct_label.head(3).to_string())\n",
-        "\n",
-        "print(\"\\n\\033[1mThree incorrect nationality hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_incorrect_label = nathate_df[nathate_df['hate']==0]\n",
-        "print(three_incorrect_label.head(3).to_string())\n",
-        "\n",
-        "print('\\n')\n",
-        "print('—————————————————————————————————————————————')\n",
-        "print('—————————————————————————————————————————————')\n",
-        "print('\\n')\n",
-        "\n",
-        "print(\"\\n\\033[1mThree correct nationality no-hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_correct_label = natnohate_df[natnohate_df['hate']==0]\n",
-        "print(three_correct_label.head(3).to_string())\n",
-        "\n",
-        "print(\"\\n\\033[1mThree incorrect nationality no-hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_incorrect_label = natnohate_df[natnohate_df['hate']==1]\n",
-        "print(three_incorrect_label.head(3).to_string())\n",
-        "\n",
-        "print('\\n')\n",
-        "print('—————————————————————————————————————————————')\n",
-        "print('—————————————————————————————————————————————')\n",
-        "print('\\n')\n",
-        "\n",
-        "print(\"\\n\\033[1mThree correct religion hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_correct_label = relhate_df[relhate_df['hate']==1]\n",
-        "print(three_correct_label.head(3).to_string())\n",
-        "\n",
-        "print(\"\\n\\033[1mThree incorrect religion hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_incorrect_label = relhate_df[relhate_df['hate']==0]\n",
-        "print(three_incorrect_label.head(3).to_string())\n",
-        "\n",
-        "print('\\n')\n",
-        "print('—————————————————————————————————————————————')\n",
-        "print('—————————————————————————————————————————————')\n",
-        "print('\\n')\n",
-        "\n",
-        "print(\"\\n\\033[1mThree correct religion no-hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_correct_label = relnohate_df[relnohate_df['hate']==0]\n",
-        "print(three_correct_label.head(3).to_string())\n",
-        "\n",
-        "print(\"\\n\\033[1mThree incorrect religion no-hate labels:\\n--------------------------------\\033[0m\")\n",
-        "three_incorrect_label = relnohate_df[relnohate_df['hate']==1]\n",
-        "print(three_incorrect_label.head(3).to_string())"
       ]
     }
   ],
