--- a/SesameStreetParty.ipynb
+++ b/SesameStreetParty.ipynb
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "id": "Tue1zHiSXMaG"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "HKC9_PCrVOlX"
       },
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -277,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -301,13 +301,12 @@
         }
       ],
       "source": [
-        "#!git clone https://{your_username}:{your_password}@github.com/{destination_repo_username}/{destination_repo_projectname}.git\n",
-        "!git clone https://lclass:2021-Earl!@github.com/lclass/NLP_Assignment_2.git\n"
+        "#!git clone https://{your_username}:{your_password}@github.com/{destination_repo_username}/{destination_repo_projectname}.git"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -332,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -356,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -391,7 +390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "jMajRlJFaKJ7"
       },
@@ -406,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -527,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "UtKLetWJt7fF"
       },
@@ -542,7 +541,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -619,7 +618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -697,7 +696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -747,7 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "mO-qYBFWRWQ-"
       },
@@ -778,7 +777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -822,7 +821,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -859,7 +858,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "id": "7Qs6VCTluIuS"
       },
@@ -878,12 +877,12 @@
       "metadata": {
         "id": "WRxBuYNaY8Mr"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "id": "tgLf0DuDVtM2"
       },
@@ -905,7 +904,7 @@
         "id": "-2vIoNEnZDZx",
         "outputId": "7abe18f0-2ad9-47bb-a319-0f44fd24a16e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -934,7 +933,7 @@
         "id": "-aOhNdiAZKrv",
         "outputId": "f6783109-c5e1-4bb3-f376-e611cbb0204d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,7 +956,7 @@
         "id": "LJhst6ctZjaA",
         "outputId": "654edb94-8e70-4c7f-a502-7e65eb2dce58"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,7 +979,7 @@
         "id": "6bMt9KOWZNIl",
         "outputId": "d61c0218-5a00-4cce-9f00-171bfcdd10d7"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +999,7 @@
       "metadata": {
         "id": "2r-Tm0OjZPdG"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1016,7 +1015,7 @@
         "id": "AYxedLqjZUNq",
         "outputId": "985b824d-2cc0-4cd5-fe96-11f4279e1ef9"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1030,7 +1029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "FFha0MbSw1Sz"
       },
@@ -1101,12 +1100,12 @@
       "metadata": {
         "id": "Op8Ei4AXYBRs"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "dwXxPTd5VtM5"
       },
@@ -1133,7 +1132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "Kgb7n8LEVtM5",
         "colab": {
@@ -1355,7 +1354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "hczC544QVtM6"
       },
@@ -1370,7 +1369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "2v6gQXcpVtM6",
         "colab": {
@@ -1428,7 +1427,7 @@
         "id": "79uG2WsWLEtl",
         "outputId": "3c7b056b-a802-41b2-ad1f-e34cda1b3953"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1470,7 +1469,7 @@
         "id": "5oDByefbLFde",
         "outputId": "7eeaf725-082b-491c-e14a-6b5d15180b33"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1511,7 +1510,7 @@
         "id": "bj1dQJnVLFsX",
         "outputId": "74961c32-bfd9-4139-e633-edcf2f6527ac"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
